objects/Case_Comments__c.object
<CustomObject>
    <description>NOTE: The &quot;Close Case&quot; button leads to a &quot;Close Case&quot; page that simulates the standard (out of the box) Close Case Page; however, it is a custom VisualForce page.</description>
    <fields>
        <fullName>Action_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if an action is required on this case. If the case is open, a flag will notify the case owner that an action is required. If the case is closed, it will re-open and be sent back to the original queue to be worked.</description>
        <inlineHelpText>Check this box if an action is required on this case. If the case is open, a flag will notify the case owner that an action is required. If the case is closed, it will re-open and be sent back to the original queue to be worked.</inlineHelpText>
        <label>Action Required/Re-open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Outcome__c</fullName>
        <label>Call Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Could Not Reach</fullName>
                </value>
                <value>
                    <fullName>Left Voicemail</fullName>
                </value>
                <value>
                    <fullName>Sent Email</fullName>
                </value>
                <value>
                    <fullName>Talked to Client</fullName>
                </value>
                <value>
                    <fullName>Talked to Advocate</fullName>
                </value>
                <value>
                    <fullName>Future Dating</fullName>
                </value>
                <value>
                    <fullName>No Action Taken</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Comments</relationshipLabel>
        <relationshipName>Case_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>Contact means</description>
        <label>Contact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Call</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>RH_Order__c</referenceTo>
        <relationshipLabel>Comments</relationshipLabel>
        <relationshipName>Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Response_Received__c</fullName>
        <label>Response Received</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Call_Outcome__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Accommodation</fullName>
                </value>
                <value>
                    <fullName>Cancel Order</fullName>
                </value>
                <value>
                    <fullName>Client Already Informed</fullName>
                </value>
                <value>
                    <fullName>Early Backorder Date</fullName>
                </value>
                <value>
                    <fullName>Early Delivery Date</fullName>
                </value>
                <value>
                    <fullName>Gift Card</fullName>
                </value>
                <value>
                    <fullName>No Accommodation</fullName>
                </value>
                <value>
                    <fullName>No Additional Action</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>TEXT(Case__r.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vendor Response</label>
        <type>Checkbox</type>
    </fields>
    <label>Case Comments</label>
    <listViews>
        <fullName>CON_Business_Administrator_Case_Comments</fullName>
        <filterScope>Queue</filterScope>
        <label>CON Business Administrator</label>
        <queue>CON_Business_Administrator</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CSC_Business_Administrators_Case_Comments</fullName>
        <filterScope>Queue</filterScope>
        <label>CSC Business Administrators</label>
        <queue>CSC_Business_Administrators</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>Comment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Comments</pluralLabel>
    <recordTypes>
        <fullName>BO_Date_Validation</fullName>
        <active>true</active>
        <label>BO Date Validation</label>
    </recordTypes>
    <recordTypes>
        <fullName>DRS_Case_Comments</fullName>
        <active>true</active>
        <label>Delivery &amp; Return Support</label>
    </recordTypes>
    <recordTypes>
        <fullName>Delay_Notifications</fullName>
        <active>true</active>
        <label>Delay Notifications</label>
    </recordTypes>
    <recordTypes>
        <fullName>Order</fullName>
        <active>true</active>
        <label>Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>Reorders</fullName>
        <active>true</active>
        <label>Reorders</label>
    </recordTypes>
    <recordTypes>
        <fullName>Replacement_Parts</fullName>
        <active>true</active>
        <label>Replacement Parts</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Only_Leads_Re_Open_Cases</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
Action_Required__c = TRUE,
NOT($UserRole.Name = &apos;Administration&apos;),
NOT($UserRole.Name = &apos;CSC Director&apos;),
NOT($UserRole.Name = &apos;CSC Backend Leader&apos;),
NOT($UserRole.Name = &apos;CSC Accommodations Supervisor&apos;),
NOT($UserRole.Name = &apos;CSC Accommodations Lead&apos;),
NOT($UserRole.Name = &apos;CSC Product Specialist Supervisor&apos;),
NOT($UserRole.Name = &apos;CSC Product Specialist Lead&apos;),
NOT($UserRole.Name = &apos;CSC Frontline Leader&apos;),
NOT($UserRole.Name = &apos;CSC Assimilation Supervisor&apos;),
NOT($UserRole.Name = &apos;CSC Frontline Supervisor&apos;),
NOT($UserRole.Name = &apos;CSC Tier 2 Leader&apos;),
NOT($UserRole.Name = &apos;CSC DC/HDL Supervisor&apos;),
NOT($UserRole.Name = &apos;CSC DC/HDL Lead&apos;),
NOT($UserRole.Name = &apos;CSC Tier 2 Supervisor&apos;),
NOT($UserRole.Name = &apos;CSC Lead/Assist&apos;),
NOT($UserRole.Name = &apos;Gatekeeper&apos;),
NOT($UserRole.Name = &apos;Gallery Field Leader&apos;),
NOT($UserRole.Name = &apos;Gallery Leader&apos;),
NOT($Profile.Name = &quot;HDL&quot;),
NOT($Profile.Name = &quot;CSC Lead and Supervisor&quot;)
)</errorConditionFormula>
        <errorDisplayField>Action_Required__c</errorDisplayField>
        <errorMessage>Please contact a lead or supervisor if you wish to re-open this case.</errorMessage>
    </validationRules>
</CustomObject>